test_suite/tests/ui/default-attribute/nameless_struct_fields.stderr
error: #[serde(default)] can only be used on structs with named fields
 --> $DIR/nameless_struct_fields.rs:5:9
  |
5 | struct T(u8, u8);
  |         ^^^^^^^^
